altering order of sections on playtesting - trying to put observation in ch 4 and rest in ch 6

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -8,77 +8,92 @@ layout: post
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
--   [Research Questions - April
-    2024](#research-questions---april-2024){#toc-research-questions---april-2024}
--   [A note on style](#a-note-on-style){#toc-a-note-on-style}
--   [Chapter
-    Introduction](#chapter-introduction){#toc-chapter-introduction}
--   [Analysis of dimensions of game making activity using 3GAT
-    framework](#analysis-of-dimensions-of-game-making-activity-using-3gat-framework){#toc-analysis-of-dimensions-of-game-making-activity-using-3gat-framework}
-    -   [Environmental factors and
-        objectives](#environmental-factors-and-objectives){#toc-environmental-factors-and-objectives}
-    -   [Making games for an
-        audience](#making-games-for-an-audience){#toc-making-games-for-an-audience}
-    -   [Constructing a game feature by
-        feature](#constructing-a-game-feature-by-feature){#toc-constructing-a-game-feature-by-feature}
-    -   [Smaller objectives and actions - Implementing discrete code and
-        design
-        structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures){#toc-smaller-objectives-and-actions---implementing-discrete-code-and-design-structures}
-        -   [Applying activity theory to surface contradictions and
-            design tensions experienced by participants and
-            facilitator/s](#applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators){#toc-applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators}
--   [Contradictions involving the use of game programming and asset
-    authoring
-    tools](#contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools){#toc-contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools}
-    -   [Using a starter game
-        template](#using-a-starter-game-template){#toc-using-a-starter-game-template}
-        -   [Variable editing for player
-            movement](#variable-editing-for-player-movement){#toc-variable-editing-for-player-movement}
-        -   [Level design and
-            prototyping](#level-design-and-prototyping){#toc-level-design-and-prototyping}
-    -   [Design adaptations to facilitate novice use of a code
-        playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground){#toc-design-adaptations-to-facilitate-novice-use-of-a-code-playground}
-        -   [Remixing and community
-            inspiration](#remixing-and-community-inspiration){#toc-remixing-and-community-inspiration}
-        -   [Addressing code syntax
-            errors](#addressing-code-syntax-errors){#toc-addressing-code-syntax-errors}
-        -   [Distributed vs. self-contained approaches to asset
-            creation](#distributed-vs.-self-contained-approaches-to-asset-creation){#toc-distributed-vs.-self-contained-approaches-to-asset-creation}
-    -   [Observations on the game template and core
-        tools](#observations-on-the-game-template-and-core-tools){#toc-observations-on-the-game-template-and-core-tools}
--   [Participant conflict associated with project navigation and use of
-    documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation){#toc-participant-conflict-associated-with-project-navigation-and-use-of-documentation}
-    -   [Quick Start Cards](#quick-start-cards){#toc-quick-start-cards}
-    -   [Code snippet
-        examples](#code-snippet-examples){#toc-code-snippet-examples}
-    -   [Structuring instructional tutorial
-        chapters](#structuring-instructional-tutorial-chapters){#toc-structuring-instructional-tutorial-chapters}
-    -   [Theming the a collection of game design patterns to aid
-        navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation){#toc-theming-the-a-collection-of-game-design-patterns-to-aid-navigation}
--   [Responding to tensions and barriers in cultural aspects of the game
-    making
-    activity](#responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity){#toc-responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity}
-    -   [Conflicts due to identity clashes and dysfunctional group
-        work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work){#toc-conflicts-due-to-identity-clashes-and-dysfunctional-group-work}
-    -   [REMOVED](#removed){#toc-removed}
-    -   [On a drama
-        processes](#on-a-drama-processes){#toc-on-a-drama-processes}
-        -   [A game encouraging maker / player
-            types](#a-game-encouraging-maker-player-types){#toc-a-game-encouraging-maker-player-types}
-        -   [Description drama process using extracts from vignettes and
-            concepts of
-            MoE](#description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe){#toc-description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe}
-        -   [Use of side missions to encourage varied creative
-            practices](#use-of-side-missions-to-encourage-varied-creative-practices){#toc-use-of-side-missions-to-encourage-varied-creative-practices}
-        -   [Observations on written interactions with the alien in the
-            drama](#observations-on-written-interactions-with-the-alien-in-the-drama){#toc-observations-on-written-interactions-with-the-alien-in-the-drama}
-        -   [Concluding remarks on process
-            drama](#concluding-remarks-on-process-drama){#toc-concluding-remarks-on-process-drama}
--   [Chapter Discussion](#chapter-discussion){#toc-chapter-discussion}
-    -   [Summary of barriers and tensions explored in this
-        chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter){#toc-summary-of-barriers-and-tensions-explored-in-this-chapter}
-    -   [Link to next
-        chapter](#link-to-next-chapter){#toc-link-to-next-chapter}
+-   [Exploration of the Formative Learning Design
+    Process](#exploration-of-the-formative-learning-design-process){#toc-exploration-of-the-formative-learning-design-process}
+    -   [Research Questions - April
+        2024](#research-questions---april-2024){#toc-research-questions---april-2024}
+    -   [A note on style](#a-note-on-style){#toc-a-note-on-style}
+    -   [Chapter
+        Introduction](#chapter-introduction){#toc-chapter-introduction}
+    -   [Analysis of dimensions of game making activity using 3GAT
+        framework](#analysis-of-dimensions-of-game-making-activity-using-3gat-framework){#toc-analysis-of-dimensions-of-game-making-activity-using-3gat-framework}
+        -   [Environmental factors and
+            objectives](#environmental-factors-and-objectives){#toc-environmental-factors-and-objectives}
+        -   [Broader activity system - a novice game making community
+            making games as a learning
+            experience](#broader-activity-system---a-novice-game-making-community-making-games-as-a-learning-experience){#toc-broader-activity-system---a-novice-game-making-community-making-games-as-a-learning-experience}
+            -   [Illustrative vignette on participants activity
+                indicating general activity of
+                participants](#illustrative-vignette-on-participants-activity-indicating-general-activity-of-participants){#toc-illustrative-vignette-on-participants-activity-indicating-general-activity-of-participants}
+        -   [Constructing a game feature by
+            feature](#constructing-a-game-feature-by-feature){#toc-constructing-a-game-feature-by-feature}
+        -   [Smaller objectives and actions - Implementing discrete code
+            and design
+            structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures){#toc-smaller-objectives-and-actions---implementing-discrete-code-and-design-structures}
+            -   [Applying activity theory to surface contradictions and
+                design tensions experienced by participants and
+                facilitator/s](#applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators){#toc-applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators}
+    -   [Contradictions involving the use of game programming and asset
+        authoring
+        tools](#contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools){#toc-contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools}
+        -   [Using a starter game
+            template](#using-a-starter-game-template){#toc-using-a-starter-game-template}
+            -   [Variable editing for player
+                movement](#variable-editing-for-player-movement){#toc-variable-editing-for-player-movement}
+            -   [Level design and
+                prototyping](#level-design-and-prototyping){#toc-level-design-and-prototyping}
+        -   [Design adaptations to facilitate novice use of a code
+            playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground){#toc-design-adaptations-to-facilitate-novice-use-of-a-code-playground}
+            -   [Remixing and community
+                inspiration](#remixing-and-community-inspiration){#toc-remixing-and-community-inspiration}
+            -   [Addressing code syntax
+                errors](#addressing-code-syntax-errors){#toc-addressing-code-syntax-errors}
+            -   [Distributed vs. self-contained approaches to asset
+                creation](#distributed-vs.-self-contained-approaches-to-asset-creation){#toc-distributed-vs.-self-contained-approaches-to-asset-creation}
+        -   [Observations on the game template and core
+            tools](#observations-on-the-game-template-and-core-tools){#toc-observations-on-the-game-template-and-core-tools}
+    -   [Participant conflict associated with project navigation and use
+        of
+        documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation){#toc-participant-conflict-associated-with-project-navigation-and-use-of-documentation}
+        -   [Quick Start
+            Cards](#quick-start-cards){#toc-quick-start-cards}
+        -   [Code snippet
+            examples](#code-snippet-examples){#toc-code-snippet-examples}
+        -   [Structuring instructional tutorial
+            chapters](#structuring-instructional-tutorial-chapters){#toc-structuring-instructional-tutorial-chapters}
+        -   [Theming the a collection of game design patterns to aid
+            navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation){#toc-theming-the-a-collection-of-game-design-patterns-to-aid-navigation}
+    -   [Responding to tensions and barriers in cultural aspects of the
+        game making
+        activity](#responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity){#toc-responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity}
+        -   [Conflicts due to identity clashes and dysfunctional group
+            work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work){#toc-conflicts-due-to-identity-clashes-and-dysfunctional-group-work}
+        -   [REMOVED](#removed){#toc-removed}
+        -   [Playtesting as a cultural
+            process](#playtesting-as-a-cultural-process){#toc-playtesting-as-a-cultural-process}
+            -   [Playtesting and embodied participation in the games of
+                others](#playtesting-and-embodied-participation-in-the-games-of-others){#toc-playtesting-and-embodied-participation-in-the-games-of-others}
+            -   [Local playtesting rather than participation with a
+                wider online
+                community](#local-playtesting-rather-than-participation-with-a-wider-online-community){#toc-local-playtesting-rather-than-participation-with-a-wider-online-community}
+        -   [On a drama
+            processes](#on-a-drama-processes){#toc-on-a-drama-processes}
+            -   [Description drama process using extracts from vignettes
+                and concepts of
+                MoE](#description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe){#toc-description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe}
+            -   [Use of side missions to encourage varied creative
+                practices](#use-of-side-missions-to-encourage-varied-creative-practices){#toc-use-of-side-missions-to-encourage-varied-creative-practices}
+            -   [Observations on written interactions with the alien in
+                the
+                drama](#observations-on-written-interactions-with-the-alien-in-the-drama){#toc-observations-on-written-interactions-with-the-alien-in-the-drama}
+            -   [Concluding remarks on process
+                drama](#concluding-remarks-on-process-drama){#toc-concluding-remarks-on-process-drama}
+    -   [Chapter
+        Discussion](#chapter-discussion){#toc-chapter-discussion}
+        -   [Summary of barriers and tensions explored in this
+            chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter){#toc-summary-of-barriers-and-tensions-explored-in-this-chapter}
+        -   [Link to next
+            chapter](#link-to-next-chapter){#toc-link-to-next-chapter}
 
 # Exploration of the Formative Learning Design Process
 
@@ -1195,6 +1210,52 @@ That week I had omitted them as I felt a sense of urgency coming from families t
 ### REMOVED
 COMPLETELY REMOVED SECTION ON PHYSICAL MAPS
 
+### Playtesting as a cultural process
+
+As explored in the literature review, playtesing is a process common to game making which corresponds to the evaluation phase of design thinking cycles.
+BE SURE TO CHECK THAT IT IS!
+
+By the time video data recording started in phase three there were already complex patterns of playtesting underway. In this section, I review data to describe some of the emerging playtesting behaviours of participants.
+
+In journal notes, I observed that the shift of process from a more open creation in p1 one to the use of a _half-baked_ templated greatly increased the amount of time participants spent playtesting their own and other games. This is implicit in the process of starting from a broadly functional game.  
+
+NOTE - can support or discussion based on the research on UMC  [-@lytle_use_2019-1] or that of half baked games [@grizioti_game_2018-1] be of use here. As a facilitator I would note my own concern if errors compounded to make the participants game unplayable for any extended time.  
+
+Participants, particularly older ones, used playtesting as a way of showing support for fellow game makers. Example behaviours included: praising graphical content; making links with home interests of participants through questioning; and building rapport.
+
+Molly in particular used playtesting to show her appreciation of the graphical work of others especially in the creation of cute animal characters. In response to one game which featured an image of a dog, other participants asked: _Do you like dogs? Do you have a dog at home?_.
+
+
+#### Playtesting and embodied participation in the games of others
+
+<!-- By the time phase three and video capture of data was underway, the process of playtesting began to take on interesting characteristics for some younger participants who were working more independently. -->
+<!-- Because these interactions were mobile between works is it hard to transcribe interactions. However, description of the physical movement and gestures of the young people is relevant to explore the value of this behaviour which I will call playful playtesting.  -->
+
+
+ <!-- Examples include.... -->
+Some children added additional playful elements to playtesting. Because these interactions were mobile between works is it hard to extract audio and transcribe their speech. However, it is possible to communicate the characteristics of this play via a description of a typical encounter and the gestures of participants.
+
+WATCH MORE CLOSELY AND TRANSCRIBE GESTURES
+
+    Play is initiated by calling across the room as an invitation to play, or as a provocation. When playtesting is underway it is normally undertaken with two or three participants standing around the computer rather than being seated. The core of those involved take turns to play the game, exclaiming frustration or triumph at completing levels or failing. Failure may be extremely performative with a rapid pulling way from the screen and keyboard. This may be followed with a battle to wrestle control of the keyboard to play the game next. This may involving playful pushing, and wrestling of hands and arms and vocalisations. While this play is happening it may attract other participants who remain on outskirts of the activity looking on able to watch what is happening on the screen and respond non-verbally with smiles or laughs.
+
+These changes to the form and function of playtesting by young participants is another example of expression of agency by participants that widens the scope of possibility of actions.
+
+<!-- There may have been a response to draw in one of the younger participants who had on parent partner and who was brought along by another parent. -->
+<!-- NOTE - Nadine's play on secret missions mirrors some of her more spontaneous play in the previous phase - thus one informs other -->
+
+
+The process of play testing as a cultural process is explored in more depth in chapter six.
+
+
+#### Local playtesting rather than participation with a wider online community
+
+There is convincing research on on how online community  can engender feelings of agency and motivation . FIND THIS - ROQUE AND ITO AND GEE. Thus, a possible question to level at the evolution of this design is why not engage with online communities as a form of authentic audience and as source of feedback as explored in the Scratch and New Grounds community websites.
+
+A primary concern here were the time consideration of the process of being involved in an online community may remove time spent doing real life playtesting. Also there is a danger that, the diversity of creations available on a online community  could remove the more communal experience of the designed limitations.
+
+More pragmatically, in this situation the use of a more professional framework, and a lack of dedicated site run for children reduced the scope for this kind of interaction.   
+
 ### On a drama processes
 
 The introduction of a drama process was introduced in response to a the barriers to participation caused by not identifying with the culture of coding or gaming.
@@ -1221,8 +1282,7 @@ The success of activity spurred the creation of the creation of side-missions to
 
 AND - link more -->
 
-My journal notes detail an evolution of attempts to try to build into the program, activities which help build the participants sense of their own identities of game makers or more generally digital designers. In and early tentative attempt to define in broad strokes the types of game maker behaviour and underlying goals, taking inspiration from Bartle's game player types [@hamari_player_2014], idenifying social makers, planners, magpies and glitchers. See appendix 4.x . I saw potential value here to address internal bias about the kind of process that a computer programmer should adopt, echoing the call for pluralism in approaches [@papert_epistemological_1990].  
-
+My journal notes detail an evolution of attempts to try to build into the program, activities which help build the participants sense of their own identities of game makers or more generally digital designers. In and early tentative attempt to define in broad strokes the types of game maker behaviour and underlying goals, taking inspiration from Bartle's game player types [@hamari_player_2014], idenifying social makers, planners, magpies and glitchers. See appendix 4.x . I saw potential value here to address internal bias about the kind of process that a computer programmer should adopt, echoing the call for pluralism in approaches [@papert_epistemological_1990]. In P2 I introduced a starter game which celebrated different game playing and making types which is also described in appendix 4.x. In P3 the underlying ideas were incorporated into the process drama described in the next section.
 
 #### Description drama process using extracts from vignettes and concepts of MoE
 
