--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -59,10 +59,15 @@
         -   [Conflicts due to identity clashes and dysfunctional group
             work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work){#toc-conflicts-due-to-identity-clashes-and-dysfunctional-group-work}
         -   [REMOVED](#removed){#toc-removed}
+        -   [Playtesting as a cultural
+            process](#playtesting-as-a-cultural-process){#toc-playtesting-as-a-cultural-process}
+            -   [Playtesting and embodied participation in the games of
+                others](#playtesting-and-embodied-participation-in-the-games-of-others){#toc-playtesting-and-embodied-participation-in-the-games-of-others}
+            -   [Local playtesting rather than participation with a
+                wider online
+                community](#local-playtesting-rather-than-participation-with-a-wider-online-community){#toc-local-playtesting-rather-than-participation-with-a-wider-online-community}
         -   [On a drama
             processes](#on-a-drama-processes){#toc-on-a-drama-processes}
-            -   [A game encouraging maker / player
-                types](#a-game-encouraging-maker-player-types){#toc-a-game-encouraging-maker-player-types}
             -   [Description drama process using extracts from vignettes
                 and concepts of
                 MoE](#description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe){#toc-description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe}
