BRINGING IN some element of GDP into ch6 - and shifting some back to ch 4.

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -1165,6 +1165,15 @@ When the family withdrew, in my journal notes I reflected that the they shared o
 
 When the family withdrew, they shared in feedback (see appendix 4.x) the moment that decided their withdrawal. that at one point they "looked around and just saw people doing hardcore coding and no longer felt that they belonged". In the end stages of the game production process, due to the dynamic of the larger group, they were reliant on others to implement code changes for their imagined game, unable to contribute fully at this point and found themselves isolated. Thus a contributing factor to this families alienation were tensions engendered by the large group size and compounded by frustrations stemming from unfamiliarity with tools and processes. In participant feedback, the  parent of this family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. This feedback contributed to choices outlined in other sections of this chapter. (WHICH ONES)
 
+Some barriers stemming from alienation from participant group working processes were resolved partly by freeing up some patterns of collaboration and interaction and removing others.
+
+The process of parents getting in the way of children's not minding jumping in and invading social space struck me. Together with the frustrations of complexities of larger group work the restrictions created a tension between the suggested community norm of how division of labour was organised.
+
+Thus in P2, rather than the larger groups of P1, smaller groups, allowing some children to work by themselves and others with parents. Avoiding large group fragmentation and encouraging freedom of participation vs benefiting from parental involvement.
+
+
+
+
 
 <!-- Based on my previous teaching experience, analysis of literature and knowledge of platform games, I pre-prepared a set of coded example and tutorials to implement a range of game design patterns. -->
 
